--- a/3.html
+++ b/3.html
@@ -15,7 +15,7 @@
 <body>
 <div id="app"></div>
 <script type="text/babel">
-//props  原则  大多数情况下是父组建向子组件传递信息
+//props  原则  大多数情况下是父组建向子组件传递信息1111
     var Message =React.createClass({
         test:function(){
             alert(1);
